using teachr_slides in 02_03

--- a/slides/chapter2_03_vectors.Rmd
+++ b/slides/chapter2_03_vectors.Rmd
@@ -1,6 +1,7 @@
 ---
 title: Vectors
 output:
+  teachr::teachr_slides:
   revealjs::revealjs_presentation:
      css: [reveal.css, slide.css]
      transition: slide
