--- a/slides/chapter2_05_matrices.Rmd
+++ b/slides/chapter2_05_matrices.Rmd
@@ -1,6 +1,7 @@
 ---
 title: Matrices
 output:
+  teachr::teachr_slides:
   revealjs::revealjs_presentation:
      css: [reveal.css, slide.css]
      transition: slide
