--- a/slides/chapter8_01_simple-linear-regression.qmd
+++ b/slides/chapter8_01_simple-linear-regression.qmd
@@ -1,7 +1,7 @@
 ---
 title: Simple linear regression
-execute:
-  keep-md: true
+#execute:
+#  keep-md: true
 format: 
   #teachr::teachr_slides:
   revealjs:
@@ -11,7 +11,6 @@ format:
     show-slide-number: all
     # below doesn't seem to be working
     #width: wide
-type: slides
 ---
 
 ```{r setup, include = FALSE}
@@ -60,7 +59,7 @@ ggplot(cars, aes(speed, dist)) +
 
 :::
 
-::: notes
+<aside class="notes">
 
 * Three lines are shown in the plot: 
   * $y = -17 + 4x$
@@ -68,7 +67,7 @@ ggplot(cars, aes(speed, dist)) +
   * $y = 80 - 3.5x$
 * Which of these three lines do you think fits the best?
 
-:::
+</aside>
 
 ---
 
@@ -141,8 +140,8 @@ rss_plot <- function(fit, label) {
                   xmax = speed,
                   ymin = df[[fit]], ymax = dist), fill = "indianred",
                  color = "indianred", size = 1.2, alpha = 0.2) +
-    geom_point() + 
     geom_line(aes(y = df[[fit]]), color = "#006dae", size = 1.5) +
+    geom_point() + 
     annotate("text", label = label, x = 10, y = 70, size = 6, color = "#006dae", fontface = "bold") +
     ggtitle(paste0("RSS = ", scales::comma(sum((df[[fit]] - df$dist)^2)))) +
     coord_cartesian(xlim = c(min(df$speed), max(df$speed)),
@@ -208,7 +207,7 @@ summary(fit)
 
 ## Exracting model summary data
 
-* You can see sueful information from  `summary(fit)` but it is not easy to extract it as a tidy data. 
+* You can see useful information from  `summary(fit)` but it is not easy to extract it as a tidy data. 
 
 * The package `broom` has handy functions to get the summary values out in a tidy format:
 
@@ -228,3 +227,34 @@ broom::glance(fit)
 ```{r}
 broom::augment(fit)
 ```
+
+---
+
+## Predictions from the fitted model
+
+
+$$\widehat{\texttt{dist}} = -17.58 + 3.93\cdot \texttt{speed}$$
+
+
+* The `predict` function can return predicted response values from a fitted model:
+
+```{r}
+predict(fit, data.frame(speed = c(5, 10)))
+```
+
+```{r predict-plot, echo = FALSE, fig.width = 5}
+pred <- data.frame(speed = c(5, 10), dist = predict(fit, data.frame(speed = c(5, 10))))
+ggplot(cars, aes(speed, dist)) +
+  geom_smooth(method = lm, se = FALSE, color = "#006dae", size = 1.5, formula = y ~ x) +
+  geom_point() +
+  geom_point(data = pred, color = "indianred", size = 3, shape = 10) +
+  scale_y_continuous(breaks = seq(0, 120, by = 20)) +
+  geom_segment(data = data.frame(x = c(5, -Inf, 10, -Inf),
+                                 xend = c(5, 5, 10, 10),
+                                 y = c(-Inf, pred$dist[1], -Inf, pred$dist[2]),
+                                 yend = c(pred$dist[1], pred$dist[1], pred$dist[2], pred$dist[2])), 
+               aes(x = x, xend = xend, y = y, yend = yend),
+               color = "indianred", linetype = "dashed")
+  
+```
+
