Finishing chapter __RStudio basic

--- a/slides/chapter1_01_Install.Rmd
+++ b/slides/chapter1_01_Install.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(fig.path = "images/chapter1-01/",
 
 ```
 
-# Why do we want to learn and use R and RStudio?
+## Why do we want to learn and use R and RStudio?
 
 * R and RStudio are powerful tools for statistical analysis
 
@@ -34,13 +34,13 @@ knitr::opts_chunk$set(fig.path = "images/chapter1-01/",
 
 ---
 
-# What is R and RStudio?
+## What is R and RStudio?
 
 R is a free software environment for statistical computing and graphics. RStudio is an integrated development environment (IDE) for R. Before you download and install RStudio, you must first downloaded and install R. One way to think about the relationship between R and RStudio is that R acts like the CPU of a computer where RStudio acts like your computer which provides easy-to-work-with interface. 
 
 ---
 
-# Download and Install R 
+## Download and Install R 
 
 Download the latest version of R from: [The Comprehensive R Archive Network (CRAN)](https://cloud.r-project.org/). 
 
@@ -52,7 +52,7 @@ knitr::include_graphics("images/chapter1-01/R_Install_CRAN.png")
 
 ---
 
-# macOS users 
+## macOS users 
 
 You should see this webpage once you click on `Download R for macOS`.  
 
@@ -60,10 +60,13 @@ You should see this webpage once you click on `Download R for macOS`.
 knitr::include_graphics("images/chapter1-01/R_Install_Mac.png")
 ```
 
+  
 Click on `R-4.1.2.pkg` to start the download. (The top one will always be the most recent version. During the first development of this short course, 4.1.2 is the latest version of R.)
+
+
 ---
 
-# macOS users 
+## macOS users 
 
 After finishing the download of `R-4.1.2.pkg`, double click on it, you should see the message below. 
 
@@ -75,7 +78,7 @@ Click `Continue`.
 
 ---
 
-# macOS users 
+## macOS users 
 
 Read through the important information about R. 
 
@@ -87,7 +90,7 @@ Click `Continue`.
 
 ---
 
-# macOS users 
+## macOS users 
 
 Read through the software licence agreement about R. 
 
@@ -99,7 +102,7 @@ Click `Continue`.
 
 ---
 
-# macOS users 
+## macOS users 
 
 The default installation location for macOS is the `Macintosh HD`. If you want to change the install location, click `Change Install Location`. Otherwise, click `Install`.
 
@@ -110,7 +113,7 @@ knitr::include_graphics("images/chapter1-01/R_Install_Mac_4.png")
 
 ---
 
-# macOS users 
+## macOS users 
 
 Once you successfully installed R. You can click `Close` to exit the installation process. 
 
@@ -120,7 +123,7 @@ knitr::include_graphics("images/chapter1-01/R_Install_Mac_5.png")
 
 ---
 
-# Install RStudio 
+## Install RStudio 
 
 Download the latest version of RStudio from [RStudio](https://www.rstudio.com/products/rstudio/download/). 
 
@@ -132,7 +135,7 @@ knitr::include_graphics("images/chapter1-01/RStudio_Install.png")
 
 ---
 
-# macOS users 
+## macOS users 
 
 Drag RStudio.app into the `Applications` folder. 
 
