--- a/slides/chapter2_03_vectors.Rmd
+++ b/slides/chapter2_03_vectors.Rmd
@@ -19,28 +19,35 @@ type: slides
 
 ## Vectors
 
-Vectors (and matrices) are used a lot in equations, models, mathematical
-optimization problems. Learning how to read and use them allows you to
-(i) understand complex operations and (ii) express operations that you
-want to perform in a compact and elegant way.
+A **vector** is an ordered finite list of numbers.
 
-A **vector** is an ordered finite list of numbers. You may have seen
-them before, for example, a (column) vector x can be written as follow:
+A (column) vector x can be written as follow:
 
 $$ x = (4,7,6,3,2) = \begin{bmatrix}4\\7\\6\\3\\2 \end{bmatrix} $$
 
 Note that a row vector (say, `y`) can be written as
 $y = (3\;4\;7\;4\;2)$ or $y = \begin{bmatrix} 3&4&7&4&2\end{bmatrix}$.
 
-In R, vectors are one-dimension arrays that can hold numeric data,
-character data or logical data. You can create a vector in R with the
-combine function `c()`, where each element in the vector is separated by
-a comma `,`. You can express the vector `x` above with the following R
+You can express the vector `x` above with the following R
 code:
 
 ```
 x <- c(4,7,6,3,2)
 ```
+
+Notes:
+
+Vectors (and matrices) are used a lot in equations, models, mathematical
+optimization problems. Learning how to read and use them allows you to
+(i) understand complex operations and (ii) express operations that you
+want to perform in a compact and elegant way.
+
+A **vector** is an ordered finite list of numbers.
+
+In R, vectors are one-dimension arrays that can hold numeric data,
+character data or logical data. You can create a vector in R with the
+combine function `c()`, where each element in the vector is separated by
+a comma `,`.
 
 ---
 
@@ -68,14 +75,21 @@ If `c` is a number and `a` is a vector (from above), you can express the scalar-
 a*3
 ```
 
+---
+
 **Scalar-vector addition** 
 
-In R, you can add a scalar `c` and a vector `a` using c+a. This means that the scalar is added to each element of the vector. For example, if you do `3+a`:
+In R, you can add a scalar `c` and a vector `a` using c+a. This means that the scalar is added to each element of the vector. 
+
+For example, if you do `3+a`:
 
 ```{r}
 3+a
 ```
-This is, however, **NOT** a standard mathematical notation. (In mathematical notations, we should use this as, e.g. $a + c \mathbf{1}$, where $a$ is a vector and $c$ is a scalar.)
+
+This is, however, **NOT** a standard mathematical notation.
+
+(In mathematical notations, we should use this as, e.g. $a + c \mathbf{1}$, where $a$ is a vector and $c$ is a scalar.)
 
 ---
 
@@ -83,16 +97,32 @@ This is, however, **NOT** a standard mathematical notation. (In mathematical not
 
 **Indexing** 
 
-To select elements of a vector (and later matrices, data frames, ...), you can use square brackets `[ ]`. Between the square brackets, you indicate what elements to select. For example, consider a vector $x$, a specific element $x_i$ is selected with the expression `x[i]` where `i` is the index (which runs from 1 to $n$, for a vector with $n$ elements). Say, we would like to obtain the 5th entry from the following vector $x$:
+A specific element $x_i$ is selected with the expression `x[i]` where `i` is the index. 
+
+Say, we would like to obtain the 5th entry from the following vector $x$:
 ```{r}
 x = c(5,6,3,4,5,8,23,4,6,4,3,23,7,5,4,23,7,90)
 x[5]
 ```
 
+Notes:
+
+To select elements of a vector (and later matrices, data frames, ...), you can use square brackets (`[ ]`). Between the square brackets, you indicate what elements to select. For example, consider a vector $x$, a specific element $x_i$ is selected with the expression `x[i]` where `i` is the index (which runs from 1 to $n$, for a vector with $n$ elements). 
+
+---
 
 **Slicing** 
 
-Sometimes it is of interest to extract a slice of a vector (a sub-vector) using an index range as the argument. $x_{r:s}$ denotes the slice of the vector from index $r$ to $s$. In the code below, `x[1:4]` selects the element from index 1 to 4.
+
+$x_{r:s}$ denotes the slice of the vector from index $r$ to $s$.
+
+For instance, `x[1:4]` selects the element from index 1 to 4.
+
 ```{r}
 x[1:4]
 ```
+
+
+Notes:
+
+Sometimes it is of interest to extract a slice of a vector (a sub-vector) using an index range as the argument. $x_{r:s}$ denotes the slice of the vector from index $r$ to $s$.
