--- a/slides/chapter6_02_dplyr.Rmd
+++ b/slides/chapter6_02_dplyr.Rmd
@@ -17,11 +17,9 @@ type: slides
 library(tidyverse)
 ```
 
-`dplyr` provides a selection of tools for the most common data wrangling tasks.
-
 ## Data Transformation and Aggregation
 
-There are a bunch of useful commands to transform and aggregate data in R. We will use inbuilt data sets: `table1`, `table2`, `table5` and `billboard` for demonstration.
+`dplyr` provides a selection of tools for the most common data wrangling tasks.
 
 - `select()`: pick particular variables from your data.
 
@@ -30,30 +28,59 @@ table1 %>%
   select(country)
 ```
 
-In addition, you can use **selection helpers**. These helpers select variables by matching patterns in their names. 
+
+Note: 
+
+There are a bunch of useful commands to transform and aggregate data in R.
+We will use inbuilt data sets: `table1`, `table2`, `table5` and `billboard` for demonstration.
+
+---
+
+### Selection helpers
 
 - `starts_with()`: select all variables that start with a prefix.
 ```{r}
 billboard %>% select(starts_with("wk"))
 ```
 
+Note:
+
+In addition, you can use **selection helpers**. These helpers select variables by matching patterns in their names.
+
+---
+
 - `ends_with()`: select all variables that end with a suffix.
 ```{r}
 billboard %>% select(ends_with("9"))
 ```
+
+Note:
+
+In addition, you can use **selection helpers**. These helpers select variables by matching patterns in their names.
+
+---
 
 - `contains()`: select all variables that contains a literal string.
 ```{r}
 table5 %>% select(contains('ry'))
 ```
 
+Note:
+
+In addition, you can use **selection helpers**. These helpers select variables by matching patterns in their names.
+
+---
+
 - `num_range()`: select all variables that matches a numerical range like x01, x02, x03.
 ```{r}
 billboard %>% select(num_range("wk", 10:15))
 ```
 
----
+Note:
 
+In addition, you can use **selection helpers**. These helpers select variables by matching patterns in their names.
+
+---
 
 You can also filter the observations, re-arrange them and add new variables.
 
@@ -64,11 +91,15 @@ table2 %>%
   filter(year==1999)
 ```
 
+---
+
 - `arrange()`: sort your data based on one or more variables
 ```{r}
 table2 %>%
   arrange(count)
 ```
+
+---
 
 - `mutate()`: add new variables or change existing variables
 ```{r}
@@ -80,16 +111,31 @@ table1 %>%
 ---
 
 
-- `group_by()` and `ungroup()`: takes existing data and groups specific variables together for future operations. These two functions are often used together with other `dplyr` functions. We will introduce them with the `summarize()` function. The `summarize()` function creates a new dataframe based on the argument provided.
+- `group_by()` and `ungroup()`: takes existing data and groups specific variables together for future operations. 
 
 ```{r}
-table2 %>% group_by(type) %>% summarize(min = min(count), max =max(count))
+table2 %>% 
+  group_by(type) %>% 
+  summarize(min = min(count), max =max(count))
 ```
+
+Note:
+
+These two functions are often used together with other `dplyr` functions. We will introduce them with the `summarize()` function. The `summarize()` function creates a new dataframe based on the argument provided.
+
+---
 
 You can summarize the data in different ways based on the groupings and different argument you included.
+
 ```{r}
-table2 %>% group_by(type) %>% summarize(mean(count), median(count),sd(count))
+table2 %>% 
+  group_by(type) %>% 
+  summarize(mean(count), median(count),sd(count))
 ```
+
+Note:
+
+These two functions are often used together with other `dplyr` functions. We will introduce them with the `summarize()` function. The `summarize()` function creates a new dataframe based on the argument provided.
 
 ---
 
@@ -98,24 +144,39 @@ table2 %>% group_by(type) %>% summarize(mean(count), median(count),sd(count))
 table2 %>% count(country)
 ```
 
-- `case_when()`: This command takes multiple conditions and tests them in order. You should order the tests from specific to general, and keep track of how those ambiguous rows are being treated. `TRUE` here is equivalent to the `else` statement.
+---
+
+- `case_when()`: This command takes multiple conditions and tests them in order. 
 
 ```{r}
-table1 %>% mutate(band = case_when(cases>= 1000 & cases <=100000~ "Medium", cases > 100000 ~ "High", TRUE ~ "Low"))
+table1 %>% 
+  mutate(band = case_when(cases>= 1000 & cases <=100000~ "Medium",
+                          cases > 100000 ~ "High",
+                          TRUE ~ "Low"))
 ```
+
+Note: 
+
+For `case_when()`, you should order the tests from specific to general, and keep track of how those ambiguous rows are being treated. `TRUE` here is equivalent to the `else` statement.
 
 ---
 
 ## Joining Datasets
 
+We are going to use the following tables in our example.
+
+```{r}
+homework1 <- tibble(name = c('Alphonso', 'Daisy', 'Philip'), 
+                    student_no = c(456,100,102), marks = c(80, 65, 34))
+homework2 <- tibble(name = c('Alphonso', 'Philip', 'Melinda'), 
+                    student_no = c(456,102,432), marks = c(85, 97, 56))
+```
+
+Note:
+
 Often you will need information from multiple datasets in your data analysis. It is important to learn different types of joins to accommodate different needs in your tasks.
 
 We are going to use the following tables in our example. Consider there are 4 students in a class and they submitted homework 1 and homework 2. The tables contains their scores for the homeworks (gradebook) and not everyone submitted their homework during the semester.
-
-```{r}
-homework1 <- tibble(name = c('Alphonso', 'Daisy', 'Philip'), student_no = c(456,100,102), marks = c(80, 65, 34))
-homework2 <- tibble(name = c('Alphonso', 'Philip', 'Melinda'), student_no = c(456,102,432), marks = c(85, 97, 56))
-```
 
 ---
 
@@ -124,13 +185,20 @@ homework2 <- tibble(name = c('Alphonso', 'Philip', 'Melinda'), student_no = c(45
 
 Mutation joins return a copy of the dataset that has been augmented.
 
+---
+
 **Inner Join**
 
 Inner joins retain only rows that exists on both datasets.
 ```{r}
 inner_join(homework1, homework2, by = c('name','student_no'))
 ```
+
+Note:
+
 When we perform inner join by `name` and `student_no`, R only returns rows that exists in both data set. When we do inner join with our `homework1` and `homework2` gradebooks, only `Alphonso` and `Philip` 's marks will show up since they are the only ones that submitted both homeworks.
+
+---
 
 **Left Join**
 
@@ -138,6 +206,9 @@ Left joins starts with the left data set (`homework1`) and search in the right d
 ```{r}
 left_join(homework1, homework2, by = c('name','student_no'))
 ```
+
+Note:
+
 When we do left join with our `homework1` and `homework2` gradebooks, we will only consider those students who submitted homework 1 and look for their marks in homework 2. Melinda's result will not be included in the join even though she has submitted her homework 2, while Daisy will have `NA` showing as the missing value.
 
 ---
@@ -148,12 +219,17 @@ Right joins starts with the right data set (homework2) and search in the left da
 ```{r}
 right_join(homework1, homework2, by = c('name','student_no'))
 ```
+
+Note:
+
 When we do right join with our `homework1` and `homework2` gradebooks, we will only consider those students who submitted homework 2 and look for their marks in homework 1. Daisy's result will not be included in the join even though she has submitted her homework 1, while Melinda will have `NA` showing as the missing value.
 
+---
 
 **Full Join**
 
 Full joins retain all rows.
+
 ```{r}
 full_join(homework1, homework2, by = c('name','student_no'))
 ```
@@ -165,17 +241,23 @@ All the submissions with the corresponding mark are included in the full join of
 
 Filtering joins return a copy of the dataset that has been filtered.
 
+---
+
 **Semi Join**
 
 The semi join returns a filtered version of the left data set based on matching entries in the right data set.
+
 ```{r}
 semi_join(homework1, homework2, by = c('name','student_no'))
 semi_join(homework2, homework1, by = c('name','student_no'))
 ```
 
+---
+
 **Anti Join**
 
 Now, let's say we want to know who didn't submit homeworks. The anti join will return the rows in the left data set that doesn't have an entry in the right data set.
+
 ```{r}
 anti_join(homework1, homework2, by = c('name','student_no'))
 anti_join(homework2, homework1, by = c('name','student_no'))
